--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,21 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+  name: my-nginx
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      run: my-nginx
+  replicas: 1
   template:
     metadata:
       labels:
-        app: nginx
+        run: my-nginx
     spec:
       containers:
-      - name: nginx
+      - name: my-nginx
         image: nginx
         ports:
         - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-nginx
+  labels:
+    run: my-nginx
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+  selector:
+    run: my-nginx
